--- a/src/peg/package.xml
+++ b/src/peg/package.xml
@@ -58,6 +58,7 @@
   <build_depend>topic_tools</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>tf_conversions</build_depend>
   
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -71,6 +72,8 @@
   <exec_depend>std_srvs</exec_depend>
   <exec_depend>topic_tools</exec_depend>
   <exec_depend>tf</exec_depend>
+  <exec_depend>tf_conversions</exec_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
